--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "scripts": {
     "lint": "eslint ./src --ext .ts,.tsx --fix && tsc --noEmit",
     "test": "yarn lint",
-    "clear": "rimraf ./theme/assets/*.js ./theme/assets/*.css ./theme/assets/*.tsbuildinfo",
-    "build": "yarn lint && yarn build:vite",
+    "clear": "rimraf ./theme/assets/*.js ./theme/assets/*.css ./theme/assets/*.tsbuildinfo ./theme/assets/*.map; exit 0;",
+    "build": "yarn clear && yarn lint && yarn build:vite",
     "build:vite": "vite build",
     "watch": "yarn clear && concurrently \"npm:watch:*\"",
     "watch:vite": "vite build --watch --mode dev",
     "watch:shopify": "shopify theme dev --store=fassbender-shop.myshopify.com --theme-editor-sync --path=./theme",
     "pull:customization": "shopify theme pull --store=fassbender-shop.myshopify.com --path=./theme -n -o 'templates/*.json' -o 'templates/customers/*.json' -o 'config/settings_data.json' -o 'locales/*.json' -l",
-    "push:dev": "shopify theme push --store=fassbender-shop.myshopify.com --path=./theme  -n -a -t 147211518264",
+    "push:dev": "shopify theme push --store=fassbender-shop.myshopify.com --path=./theme  -n -a -t 148039270664",
     "push:rc": "shopify theme push --store=fassbender-shop.myshopify.com --path=./theme -u -t \"Release Candidate\""
   },
   "repository": {
