--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch": "yarn clear && concurrently \"npm:watch:*\"",
     "watch:vite": "vite build --watch --mode dev",
     "watch:shopify": "shopify theme dev --store=fassbender-shop.myshopify.com --theme-editor-sync --path=./theme",
-    "pull:customization": "shopify theme pull --store=fassbender-shop.myshopify.com --path=./theme -n -o 'templates/*.json' -o 'templates/customers/*.json' -o 'config/settings_data.json' -o 'locales/*.json' -l",
+    "pull:customization": "shopify theme pull --store=fassbender-shop.myshopify.com --path=./theme -n -o 'templates/*' -o 'templates/customers/*' -o 'config/settings_data.json' -o 'locales/*.json' -l",
     "push:dev": "shopify theme push --store=fassbender-shop.myshopify.com --path=./theme  -n -a -t 148039270664",
     "push:rc": "shopify theme push --store=fassbender-shop.myshopify.com --path=./theme -u -t \"Release Candidate\""
   },
